--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,4 +8,6 @@
   
 <p><a href="/about">Read more about</a> this website or <a href="/">suggest</a> games that you think should be included.</p>
 
+<p>If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/cozymaus" target="_blank">Twitter</a> for progress updates on all my projects. You can also help by donating at <a href="https://paypal.me/cozymaus" target="_blank">PayPal.me/cozymaus</a>.</p>
+  
 </div>
