--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
 <!--<img class="logo" src="{{ site.image }}">-->
 </p>
 
-<p>Welcome to my Dragon Database, where you can discover all the video games featuring dragons as playable characters!</p>
+<p>Welcome to my Dragon Database, where you can discover all the video games featuring dragons as playable characters! 🐉 There are currently <strong>{{ site.posts | size }} entries</strong> in this database.</p>
   
 <p><a href="/about">Read more about</a> this website or <a href="/">suggest</a> games that you think should be included.</p>
 
