--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,13 +1,9 @@
 <div class="widget">
 
-<p style="text-align:center;">
-<!--<img class="logo" src="{{ site.image }}">-->
-</p>
-
 <p>Welcome to my Dragon Database, where you can discover all the video games featuring dragons as playable characters! 🐉 There are currently <strong>{{ site.posts | size }} entries</strong> in this database.</p>
   
 <p><a href="/about">Read more about</a> this website or <a href="/">suggest</a> games that you think should be included.</p>
 
-<p>If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/cozymaus" target="_blank">Twitter</a> for progress updates on all my projects. You can also help by donating at <a href="https://paypal.me/cozymaus" target="_blank">PayPal.me/cozymaus</a>.</p>
+<p style="padding-bottom: 0px;">If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/cozymaus" target="_blank">Twitter</a> for progress updates on all my projects. You can also help by donating at <a href="https://paypal.me/cozymaus" target="_blank">PayPal.me/cozymaus</a>.</p>
   
 </div>
