--- a/index.css
+++ b/index.css
@@ -115,7 +115,7 @@ div#sidebar {
 	float: left;
 	/*border: 5px solid black;
 	border-left: none;*/
-	height: 100%;
+	height: 100vh;
 	/*padding: 20px;*/
 }
 
