--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="description" content="{{ site.description }}">
-<meta name="keywords" content="dragons, games, database, video games, anthropomorphic, dragons in games">
+<meta name="keywords" content="dragons, animals, games, database, video games, anthropomorphic, dragons in games, animals in games">
 <meta name="author" content="{{ site.author_name }}">
 <meta name="twitter" content="{{ site.author_name }}">
 
@@ -46,8 +46,8 @@
 </script>
 
 <!--<script src="/index.js"></script>-->
-<link href="https://dragons.cozymaus.com/cssreset.css" rel="stylesheet">
-<link href="https://dragons.cozymaus.com/index.css" rel="stylesheet">
+<link href="https://animals.cozymaus.com/cssreset.css" rel="stylesheet">
+<link href="https://animals.cozymaus.com/index.css" rel="stylesheet">
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon }}">
 
 </head>
@@ -57,12 +57,12 @@
   <div class="container-fluid">
 
     <div id="title">
-      <h1><a href="https://dragons.cozymaus.com/">Dragon Database</a></h1>
+      <h1><a href="https://animals.cozymaus.com/">Dragon Database</a></h1>
       <h2>🖱️ A Project by <a href="https://cozymaus.com" target="_blank">CozyMaus</a> 🐭</h2>
     </div>
 
     <!--<form method="get" action="https://www.google.com/search" target="_blank">
-        <input type="hidden" name="sitesearch" value="dragons.cozymaus.com" />
+        <input type="hidden" name="sitesearch" value="animals.cozymaus.com" />
         <input type="text" name="q" maxlength="255" placeholder="Search with Google" />
         </form>-->
     
