--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <div class="widget">
 
-<p>Welcome to my Dragon Database, where you can discover all the video games featuring dragons as playable characters! 🐉 There are currently <strong>{{ site.posts | size }} entries</strong> in this database.</p>
+<p>Welcome to my Dragon Database, where you can discover all the video games featuring animals as playable characters! 🐉 There are currently <strong>{{ site.posts | size }} entries</strong> in this database.</p>
   
 <p>Read more <a href="/about">about this website</a> or <a href="/">suggest games</a> that you think should be included.</p>
   
