--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -3,7 +3,7 @@
 
 		📅 Released {{ page.date | date_to_long_string }}	<br>
 
-		🐉 Type of dragon: 
+		🐉 Type of animal: 
 		{% for tags in page.type %}
 
 		[&nbsp;{{ tags }}&nbsp;]  
