--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,8 +46,8 @@
 </script>
 
 <!--<script src="/index.js"></script>-->
-<link href="https://animals.cozymaus.com/cssreset.css" rel="stylesheet">
-<link href="https://animals.cozymaus.com/index.css" rel="stylesheet">
+<link href="{{ site.url }}/animals/cssreset.css" rel="stylesheet">
+<link href="{{ site.url }}/animals/index.css" rel="stylesheet">
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon }}">
 
 </head>
@@ -57,8 +57,8 @@
   <div class="container-fluid">
 
     <div id="title">
-      <h1><a href="https://animals.cozymaus.com/">Animal Games Database</a></h1>
-      <h2>🖱️ A Project by <a href="https://cozymaus.com" target="_blank">CozyMaus</a> 🐭</h2>
+      <h1><a href="{{ site.url }}/animals">Animal Games Database</a></h1>
+      <h2>🖱️ A Project by <a href="{{ site.url }}" target="_blank">CozyMaus</a> 🐭</h2>
     </div>
 
     <!--<form method="get" action="https://www.google.com/search" target="_blank">
