--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,6 +1,6 @@
 <div class="widget">
         <form method="get" action="https://www.google.com/search" target="_blank">
-        <input type="hidden" name="sitesearch" value="animals.cozymaus.com" />
+        <input type="hidden" name="sitesearch" value="{{ site.url }}/animals" />
         <input type="text" name="q" maxlength="255" placeholder="Search with Google" />
         </form>
 </div>
