--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,6 +6,6 @@
   
 <p>Visit my <a href="https://store.steampowered.com/curator/38329046/">Steam Curator page</a> for my PC game recommendations and reviews.</p>
 
-<p style="padding-bottom: 0px;">If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/lizberberena" target="_blank">Twitter</a> for progress updates on all my projects. You can also help by donating at <a href="https://ko-fi.com/cozymaus" target="_blank">Ko-fi.com/cozymaus</a>.</p>
+<p style="padding-bottom: 0px;">If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/lizberberena" target="_blank">Twitter</a> for progress updates on all my projects. You can also help by donating at <a href="https://ko-fi.com/lizberberena" target="_blank">Ko-fi.com/lizberberena</a>.</p>
   
 </div>
