--- a/_includes/widget_archives.html
+++ b/_includes/widget_archives.html
@@ -1,60 +1,60 @@
         <select onchange="location = this.value;">
             <option value=" ">Filter by dragon type</option>
 
-            <option value="/type/#dragon">dragon</a></option>
-            <option value="/type/#wyvern">wyvern</a></option>
-            <option value="/type/#amphithere">amphithere</a></option>
-            <option value="/type/#wyrm">wyrm</a></option>
-            <option value="/type/#lindwurm">lindwurm</a></option>
-            <option value="/type/#lung-dragon">lung dragon</a></option>
-            <option value="/type/#drake">drake</a></option>
+            <option value="{{ site.url }}/animals/type/#dragon">dragon</a></option>
+            <option value="{{ site.url }}/animals/type/#wyvern">wyvern</a></option>
+            <option value="{{ site.url }}/animals/type/#amphithere">amphithere</a></option>
+            <option value="{{ site.url }}/animals/type/#wyrm">wyrm</a></option>
+            <option value="{{ site.url }}/animals/type/#lindwurm">lindwurm</a></option>
+            <option value="{{ site.url }}/animals/type/#lung-dragon">lung dragon</a></option>
+            <option value="{{ site.url }}/animals/type/#drake">drake</a></option>
 
         </select>
 <br><br>
         <select onchange="location = this.value;">
             <option value=" ">Filter by genre</option>
 
-            <option value="/genre/#action">action</a></option>
-            <option value="/genre/#action-adventure">action-adventure</a></option>
-            <option value="/genre/#fighting">fighting</a></option>
-            <option value="/genre/#fps">fps</a></option>
-            <option value="/genre/#mmo">mmo</a></option>
-            <option value="/genre/#party">party</a></option>
-            <option value="/genre/#platformer">platformer</a></option>
-            <option value="/genre/#puzzle">puzzle</a></option>
-            <option value="/genre/#rpg">rpg</a></option>
-            <option value="/genre/#sandbox">sandbox</a></option>
-            <option value="/genre/#simulation">simulation</a></option>
-            <option value="/genre/#social">social</a></option>
-            <option value="/genre/#survival">survival</a></option>
-            <option value="/genre/#tps">tps</a></option>
-            <option value="/genre/#visual-novel">visual novel</a></option>
+            <option value="{{ site.url }}/animals/genre/#action">action</a></option>
+            <option value="{{ site.url }}/animals/genre/#action-adventure">action-adventure</a></option>
+            <option value="{{ site.url }}/animals/genre/#fighting">fighting</a></option>
+            <option value="{{ site.url }}/animals/genre/#fps">fps</a></option>
+            <option value="{{ site.url }}/animals/genre/#mmo">mmo</a></option>
+            <option value="{{ site.url }}/animals/genre/#party">party</a></option>
+            <option value="{{ site.url }}/animals/genre/#platformer">platformer</a></option>
+            <option value="{{ site.url }}/animals/genre/#puzzle">puzzle</a></option>
+            <option value="{{ site.url }}/animals/genre/#rpg">rpg</a></option>
+            <option value="{{ site.url }}/animals/genre/#sandbox">sandbox</a></option>
+            <option value="{{ site.url }}/animals/genre/#simulation">simulation</a></option>
+            <option value="{{ site.url }}/animals/genre/#social">social</a></option>
+            <option value="{{ site.url }}/animals/genre/#survival">survival</a></option>
+            <option value="{{ site.url }}/animals/genre/#tps">tps</a></option>
+            <option value="{{ site.url }}/animals/genre/#visual-novel">visual novel</a></option>
             
         </select>
 <br><br>
         <select onchange="location = this.value;">
             <option value=" ">Filter by platform</option>
 
-            <option value="/platform/#android">Android</a></option>
-            <option value="/platform/#dreamcast">Dreamcast</a></option>
-            <option value="/platform/#gamecube">GameCube</a></option>
-            <option value="/platform/#ios">iOS</a></option>
-            <option value="/platform/#iqueplayer">iQue Player</a></option>
-            <option value="/platform/#linux">Linux</a></option>
-            <option value="/platform/#macos">macOS</a></option>   
-            <option value="/platform/#nintendo3ds">Nintendo 3DS</a></option>
-            <option value="/platform/#nintendo64">Nintendo 64</a></option>
-            <option value="/platform/#nintendods">Nintendo DS</a></option>
-            <option value="/platform/#nintendoswitch">Nintendo Switch</a></option>
-            <option value="/platform/#playstation1">PlayStation 1</a></option>
-            <option value="/platform/#playstation2">PlayStation 2</a></option>
-            <option value="/platform/#playstation3">PlayStation 3</a></option>
-            <option value="/platform/#playstation4">PlayStation 4</a></option>
-            <option value="/platform/#wii">Wii</a></option>
-            <option value="/platform/#wiiu">Wii U</a></option>
-            <option value="/platform/#windows">Windows</a></option>
-            <option value="/platform/#xbox">Xbox</a></option>
-            <option value="/platform/#xbox360">Xbox 360</a></option>
-            <option value="/platform/#xboxone">Xbox One</a></option>
+            <option value="{{ site.url }}/animals/platform/#android">Android</a></option>
+            <option value="{{ site.url }}/animals/platform/#dreamcast">Dreamcast</a></option>
+            <option value="{{ site.url }}/animals/platform/#gamecube">GameCube</a></option>
+            <option value="{{ site.url }}/animals/platform/#ios">iOS</a></option>
+            <option value="{{ site.url }}/animals/platform/#iqueplayer">iQue Player</a></option>
+            <option value="{{ site.url }}/animals/platform/#linux">Linux</a></option>
+            <option value="{{ site.url }}/animals/platform/#macos">macOS</a></option>   
+            <option value="{{ site.url }}/animals/platform/#nintendo3ds">Nintendo 3DS</a></option>
+            <option value="{{ site.url }}/animals/platform/#nintendo64">Nintendo 64</a></option>
+            <option value="{{ site.url }}/animals/platform/#nintendods">Nintendo DS</a></option>
+            <option value="{{ site.url }}/animals/platform/#nintendoswitch">Nintendo Switch</a></option>
+            <option value="{{ site.url }}/animals/platform/#playstation1">PlayStation 1</a></option>
+            <option value="{{ site.url }}/animals/platform/#playstation2">PlayStation 2</a></option>
+            <option value="{{ site.url }}/animals/platform/#playstation3">PlayStation 3</a></option>
+            <option value="{{ site.url }}/animals/platform/#playstation4">PlayStation 4</a></option>
+            <option value="{{ site.url }}/animals/platform/#wii">Wii</a></option>
+            <option value="{{ site.url }}/animals/platform/#wiiu">Wii U</a></option>
+            <option value="{{ site.url }}/animals/platform/#windows">Windows</a></option>
+            <option value="{{ site.url }}/animals/platform/#xbox">Xbox</a></option>
+            <option value="{{ site.url }}/animals/platform/#xbox360">Xbox 360</a></option>
+            <option value="{{ site.url }}/animals/platform/#xboxone">Xbox One</a></option>
             
         </select>
